[gd_scene load_steps=7 format=3 uid="uid://c6sep1bmvbpqu"]

[ext_resource type="PackedScene" uid="uid://cen8wk42urg4y" path="res://Player.tscn" id="1_esprk"]
[ext_resource type="Script" path="res://Main.gd" id="1_l43s2"]
[ext_resource type="Texture2D" uid="uid://ibljxic17o3b" path="res://mountain.png" id="3_c6nwu"]
[ext_resource type="PackedScene" uid="uid://b3x6lndoypfgm" path="res://HUD.tscn" id="3_nms2x"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vwrut"]
size = Vector2(599, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vnkj4"]
size = Vector2(600.5, 23.5)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_l43s2")

[node name="PipeTimer" type="Timer" parent="."]
wait_time = 4.0

[node name="HUD" parent="." instance=ExtResource("3_nms2x")]

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(298, 404)
texture = ExtResource("3_c6nwu")

[node name="Area2D" type="Area2D" parent="."]

[node name="TopCollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(300.5, -14.5)
shape = SubResource("RectangleShape2D_vwrut")

[node name="BottomCollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(300.75, 820.75)
shape = SubResource("RectangleShape2D_vnkj4")

[node name="Player" parent="." instance=ExtResource("1_esprk")]
position = Vector2(154, 409)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
